Created middle and bottom part in qualifications section in about.html
Added all illustrations of logos, paragraphs and styled in about.css.

--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
 
             <div id="qualifications-content">
                 <!-- Figma -->
-                <div>
-                   <div class="quali-top">
+                <article>
+                    <div class="quali-top">
                         <div>
                             <h3>Figma</h3>
                         </div>
@@ -83,74 +83,165 @@
                         <div class="quali-programs">
                             <img src="assets/illustrations/figma-logo.svg" alt="Figma logo">
                         </div>
-                        <div>
-                            <p>
-                                Programmerne i Adobe-pakken er
-                                <span class="bold-body">standardværktøjskassen</span>
-                                til en multimediedesigner. Indtil videre har jeg beskæftiget mig mest med Illustrator,
-                                After
-                                Effects, Photoshop, InDesign og
-                                Lightroom CC. Målet er at blive dygtigere og bedre til at bruge flere af Adobes
-                                værktøjer.
-                            </p>
-                        </div>
+                        <p>
+                            Jeg bruger programmet Figma til at
+                            <span class="bold-body">udvikle prototyper</span>
+                            til apps og hjemmesider. Oftest laver
+                            jeg flere forskellige stadier af produktet - først fokuserer jeg på at skitse og udvikle
+                            selve funktionerne, der er
+                            <span class="bold-body">ideelle for brugeren</span>
+                            , herefter tilføjes
+                            <span class="bold-body">designet</span>
+                            , og undervejs søger jeg feedback for at optimere det endelige produkt.
+                        </p>
                     </div>
                     <div class="quali-bottom">
                         <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
                     </div>
-                </div>
+                </article>
 
 
 
                 <!-- Web- og grafiskdesign -->
-                <div class="qualifications-box">
-                    <div>
-                        <h3>Web- og grafiskdesign</h3>
+                <article>
+                    <div class="quali-top">
+                        <div>
+                            <h3>Web- og grafiskdesign</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle">
+                        <p>Jeg har noget erfaring inden for webdesign og søger altid efter at ende med et
+                            <span class="bold-body">moderne og brugervenligt resultat</span>
+                            , som hænger sammen med
+                            <span class="bold-body">virksomhedens identitet</span>
+                            . Udover dette har jeg også beskæftiget
+                            mig med grafisk design, bl.a. flyers og plakater. Jeg finder det spændende at veksle mellem
+                            webdesign og grafisk design, fordi begge områder har hver deres fokus.
+                        </p>
                     </div>
-                </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                    </div>
+                </article>
+
 
                 <!-- Creative Cloud -->
-                <div class="qualifications-box">
-                    <div>
-                        <h3>Creative Cloud</h3>
+                <article>
+                    <div class="quali-top">
+                        <div>
+                            <h3>Creative Cloud</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle">
+                        <div class="quali-programs">
+                            <img src="assets/illustrations/adobe-illustrator-logo.svg" alt="Adobe Illustrator logo">
+                            <img src="assets/illustrations/adobe-photoshop-logo.svg" alt="Adobe Photoshop logo">
+                            <img src="assets/illustrations/adobe-after-effects-logo.svg" alt="Adobe After Effects logo">
+                            <img src="assets/illustrations/adobe-lightroom-classic-cc-logo.svg"
+                                alt="Adobe Lightroom Classic CC logo">
+                            <img src="assets/illustrations/adobe-indesign-logo.svg" alt="Adobe InDesign logo">
+                        </div>
+                        <p>
+                            Programmerne i Adobe-pakken er
+                            <span class="bold-body">standardværktøjskassen</span>
+                            til en multimediedesigner. Indtil videre har jeg beskæftiget mig mest med Illustrator,
+                            After
+                            Effects, Photoshop, InDesign og
+                            Lightroom CC. Målet er at blive dygtigere og bedre til at bruge flere af Adobes
+                            værktøjer.
+                        </p>
                     </div>
-                </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                    </div>
+                </article>
+
 
                 <!-- UI/UX -->
-                <div class="qualifications-box">
-                    <div>
-                        <h3>UI/UX</h3>
+                <article>
+                    <div class="quali-top">
+                        <div>
+                            <h3>UI/UX</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle">
+                        <p>
+                            Brugergrænseflader er det, som jeg beskæftiger mig med mest af tiden. Her fokuseres der på
+                            <span class="bold-body">brugeroplevelsen</span>
+                            og om designet er
+                            <span class="bold-body">funktionelt</span>
+                            for den målgruppe, produktet er rettet mod.
+                            Jeg synes, det er utrolig spændende at arbejde med, hvordan man udvikler og designer det
+                            bedste produkt til brugeren, hvor alt går op i en højere enhed.
+                        </p>
                     </div>
-                </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                    </div>
+                </article>
+
 
                 <!-- Copywriting -->
-                <div class="qualifications-box">
-                    <div>
-                        <h3>Copywriting</h3>
+                <article>
+                    <div class="quali-top">
+                        <div>
+                            <h3>Copywriting</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle">
+                        <p>
+                            At skrive, så modtageren overbevises til at foretage en specifik handling. Her gælder det om
+                            at være virkelig
+                            <span class="bold-body">skarp</span>
+                            og klar over, hvem målgruppen er for det udvalgte produkt. Det, jeg
+                            synes, er fedt ved copywriting, er at
+                            <span class="bold-body">det kan gøre hvilket som helst emne interessant</span>
+                            , samt at der er utallige måder, man kan formulere sig på, afhængigt af hvilken tone of
+                            voice man ønsker.
+                        </p>
                     </div>
-                </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                    </div>
+                </article>
+
 
                 <!-- HTML & CSS -->
-                <div class="qualifications-box">
-                    <div>
-                        <h3>HTML & CSS</h3>
+                <article>
+                    <div class="quali-top">
+                        <div>
+                            <h3>HTML & CSS</h3>
+                        </div>
+                        <div>
+                            <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/illustrations/keyboard_arrow_down.svg" alt="Vector arrow down">
+                    <div class="quali-middle">
+                        <div class="quali-programs">
+                            <img src="assets/illustrations/visual-studio-code-logo.svg" alt="Visual Studio Code logo">
+                        </div>
+                        <p>
+                            Jeg har kendskab til HTML og CSS samt CMS-systemet Wordpress, men alt dette er stadig meget
+                            nyt for mig. Dog er jeg godt på vej til at få mere kendskab til udvikling, hvor jeg er
+                            nysgerrig på, hvordan man opbygger hjemmesider fra bunden i Visual Studio Code.
+                        </p>
                     </div>
-                </div>
+                    <div class="quali-bottom">
+                        <img src="assets/illustrations/keyboard_arrow_up.svg" alt="">
+                    </div>
+                </article>
             </div>
 
 
