Deleted png images and inserted new webp file images
Also corrected all img in all html documents so they link to the right optimised image.

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <main>
         <section id="intro-about">
             <h1>OM MIG</h1>
-            <img src="assets/images/index-profile-picture.png" alt="Profile picture of Stine Julius">
+            <img src="assets/images/profilepicture-forest-front.webp" alt="Profile picture of Stine Julius">
         </section>
 
         <section id="about-text-section">
@@ -272,7 +272,7 @@
                         <img src="assets/illustrations/arrow-backwards.svg" alt="Arrow pointing backwards">
                         <img src="assets/illustrations/arrow-forward.svg" alt="Arrow pointing forwards">
                     </div>
-                    <img class="hobby-image" src="assets/images/hobby-procreate.png"
+                    <img class="hobby-image" src="assets/images/hobby-procreate.webp"
                         alt="Procreate drawing of tiny person on a book drawing with pencils">
                 </div>
                 <div>
