--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                     <h3>Prototype - Landsbyens Fortællinger</h3>
                 </div>
                 <div class="project-box-image">
-                    <img class="box-image" src="assets/images/project-prototype.png"
+                    <img class="box-image" src="assets/images/project-prototype.webp"
                         alt="Prototype of Landsbyens Fortællinger app">
                 </div>
                 <div class="box-bodytext">
@@ -104,7 +104,7 @@
                     <h3>Selvportræt</h3>
                 </div>
                 <div class="project-box-image">
-                    <img class="box-image" src="assets/images/project-selfportrait.png" alt="Selfportrait">
+                    <img class="box-image" src="assets/images/project-portrait.webp" alt="Selfportrait">
                 </div>
                 <div class="box-bodytext">
                     <h4>Eget projekt</h4>
@@ -128,7 +128,7 @@
                     <h3>Plakat - Landsbyens Fortællinger</h3>
                 </div>
                 <div class="project-box-image">
-                    <img class="box-image" src="assets/images/project-poster.png"
+                    <img class="box-image" src="assets/images/project-poster.webp"
                         alt="Poster for Landsbyens Fortællinger app">
                 </div>
                 <div class="box-bodytext">
@@ -161,7 +161,7 @@
                     <h3>Produktbillede</h3>
                 </div>
                 <div class="project-box-image">
-                    <img class="box-image" src="assets/images/project-productphoto.png"
+                    <img class="box-image" src="assets/images/projects-product-picture.webp"
                         alt="Productphoto of Instax camera">
                 </div>
                 <div class="box-bodytext">
