--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
         <section>
             <div id="contact-picture">
-                <img src="assets/images/index-profile-picture.png" alt="Photo of Stine Julius">
+                <img src="assets/images/profilepicture-studio.webp" alt="Photo of Stine Julius">
             </div>
         </section>
     </main>
