Created button to link in 3 html documents
Decided to use a tag instead of button, because the style wouldn't stay the same with the button tag.

--- a/about.html
+++ b/about.html
@@ -291,9 +291,9 @@
                 <h3>Passer jeg lige ind i jeres team?</h3>
                 <h3>Så tøv endelig ikke med at kontakte mig!</h3>
             </div>
-            <button class="cta-button">
+            <a href="contact.html" class="cta-button">
                 <h3>START SAMARBEJDE</h3>
-            </button>
+            </a>
         </section>
     </main>
 
