--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
 
                 <div id="fp-call-to-action">
                     <h3 id="fp-headline">Er du interesseret i et godt samarbejde?</h3>
-                    <button class="cta-button">
-                        <h3>KONTAKT</h3>
-                    </button>
+                    <a href="contact.html" class="cta-button">
+                            <h3>KONTAKT</h3>
+                    </a>
+                        
                 </div>
             </div>
         </section>
