--- a/projects.html
+++ b/projects.html
@@ -206,9 +206,9 @@
 
         <!-- Call to action button -->
         <section id="projects-cta">
-            <button class="cta-button">
+            <a href="contact.html" class="cta-button">
                 <h3>START SAMARBEJDE</h3>
-            </button>
+            </a>
         </section>
     </main>
 
