--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,39 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
     <header>
-        <a href="index.html">
+        <a class="logo" href="index.html">
             <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
         </a>
-        <img src="assets/illustrations/menu.svg" alt="Burger Menu">
+        <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+        <div id="header-menu-content-js" class="menu">
+            <a class="menu-link" href="index.html">
+                <h3>
+                    Forside
+                </h3>
+            </a>
+            <a class="menu-link" href="projects.html">
+                <h3>
+                    Projekter
+                </h3>
+            </a>
+            <a class="menu-link" href="about.html">
+                <h3>
+                    Om mig
+                </h3>
+            </a>
+            <a class="menu-link" href="contact.html">
+                <h3>
+                    Kontakt
+                </h3>
+            </a>
+        </div>
     </header>
+
 
     <main>
         <section id="intro-contact">
