Added images in hobby-section
Also changed the path to a different svg because it had to be wider for when the screen is wider. Also started on media queries in base.css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,30 @@
         <a class="logo" href="index.html">
             <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
         </a>
+        <nav id="menu-desktop">
+            <a href="index.html">
+                <h3>
+                    Forside
+                </h3>
+            </a>
+            <a href="projects.html">
+                <h3>
+                    Projekter
+                </h3>
+            </a>
+            <a href="about.html">
+                <h3>
+                    Om mig
+                </h3>
+            </a>
+            <a href="contact.html">
+                <h3>
+                    Kontakt
+                </h3>
+            </a>
+        </nav>
         <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
-        <div id="header-menu-content-js" class="menu">
+        <nav id="header-menu-content-js" class="menu">
             <a class="menu-link" href="index.html">
                 <h3>
                     Forside
@@ -42,7 +64,7 @@
                     Kontakt
                 </h3>
             </a>
-        </div>
+        </nav>
     </header>
 
     <main>
