--- a/about.html
+++ b/about.html
@@ -20,8 +20,34 @@
         <a class="logo" href="index.html">
             <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
         </a>
+
+        <!-- Desktop -->
+        <nav id="menu-desktop">
+            <a class="desktop-menu-text" href="index.html">
+                <h3>
+                    Forside
+                </h3>
+            </a>
+            <a class="desktop-menu-text" href="projects.html">
+                <h3>
+                    Projekter
+                </h3>
+            </a>
+            <a class="desktop-menu-text" href="about.html">
+                <h3>
+                    Om mig
+                </h3>
+            </a>
+            <a class="desktop-menu-text" href="contact.html">
+                <h3>
+                    Kontakt
+                </h3>
+            </a>
+        </nav>
+
+        <!-- Mobile -->
         <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
-        <div id="header-menu-content-js" class="menu">
+        <nav id="header-menu-content-js" class="menu">
             <a class="menu-link" href="index.html">
                 <h3>
                     Forside
@@ -42,7 +68,7 @@
                     Kontakt
                 </h3>
             </a>
-        </div>
+        </nav>
     </header>
 
 
@@ -379,35 +405,43 @@
 
     <footer>
         <section id="top-footer">
-            <div id="footer-contact-information">
-                <a class="footer-contact" href="https://www.linkedin.com/in/stinejulius/" target="_blank">
-                    <img src="assets/illustrations/linkedin.svg" alt="LinkedIn logo">
-                    <p>@stinejulius</p>
-                </a>
-                <div class="footer-contact">
-                    <img src="assets/illustrations/phone.svg" alt="Telefon ikon">
-                    <p>+45 61 67 86 22</p>
+            <div id="top-footer-box">
+                <div id="footer-contact-information">
+                    <h4>Kontakt</h4>
+                    <a class="footer-contact" href="https://www.linkedin.com/in/stinejulius/" target="_blank">
+                        <img src="assets/illustrations/linkedin.svg" alt="LinkedIn logo">
+                        <p>@stinejulius</p>
+                    </a>
+                    <a href="tel:+4561678622" class="footer-contact">
+                        <img src="assets/illustrations/phone.svg" alt="Telefon ikon">
+                        <p>+45 61 67 86 22</p>
+                    </a>
+                    <a href="mailto:stinejulius@protonmail.com" class="footer-contact">
+                        <img src="assets/illustrations/mail.svg" alt="Mail ikon">
+                        <p>stinejulius@protonmail.com</p>
+                    </a>
                 </div>
-                <div class="footer-contact">
-                    <img src="assets/illustrations/mail.svg" alt="Mail ikon">
-                    <p>stinejulius@protonmail.com</p>
-                </div>
+                <nav id="footer-nav">
+                    <h4>Navigation</h4>
+                    <div>
+                        <a href="index.html">Forside</a>
+                        <a href="about.html">Om mig</a>
+                    </div>
+                    <div>
+                        <a href="projects.html">Projekter</a>
+                        <a href="contact.html">Kontakt</a>
+                    </div>
+                </nav>
             </div>
-            <div id="footer-nav">
-                <div>
-                    <a href="index.html">Forside</a>
-                    <a href="about.html">Om mig</a>
-                </div>
-                <div>
-                    <a href="projects.html">Projekter</a>
-                    <a href="contact.html">Kontakt</a>
-                </div>
-            </div>
-
         </section>
 
         <section id="bottom-footer">
-            <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
+            <div id="bottom-footer-box">
+                <a class="logo" href="index.html">
+                    <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+                </a>
+                <h5>© 2024 Stine Julius | Hibiscusvej 20 | 5200 Odense V</h5>
+            </div> 
         </section>
     </footer>
 </body>
