Made index.html fully responsive
Added, created and styles different things, added the responsive header and footer in all html files, created media queries for both base.css and index.css. Also inserted illustration for desktop view in index.html.

--- a/about.html
+++ b/about.html
@@ -17,58 +17,60 @@
 
 <body>
     <header>
-        <a class="logo" href="index.html">
-            <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
-        </a>
+        <section id="header-box">
+            <a class="logo" href="index.html">
+                <img src="assets/illustrations/logo.svg" alt="Stine Julius logo">
+            </a>
 
-        <!-- Desktop -->
-        <nav id="menu-desktop">
-            <a class="desktop-menu-text" href="index.html">
-                <h3>
-                    Forside
-                </h3>
-            </a>
-            <a class="desktop-menu-text" href="projects.html">
-                <h3>
-                    Projekter
-                </h3>
-            </a>
-            <a class="desktop-menu-text" href="about.html">
-                <h3>
-                    Om mig
-                </h3>
-            </a>
-            <a class="desktop-menu-text" href="contact.html">
-                <h3>
-                    Kontakt
-                </h3>
-            </a>
-        </nav>
+            <!-- Desktop -->
+            <nav id="menu-desktop">
+                <a class="desktop-menu-text" href="index.html">
+                    <h3>
+                        Forside
+                    </h3>
+                </a>
+                <a class="desktop-menu-text" href="projects.html">
+                    <h3>
+                        Projekter
+                    </h3>
+                </a>
+                <a id="menu-selected" class="desktop-menu-text" href="about.html">
+                    <h3>
+                        Om mig
+                    </h3>
+                </a>
+                <a class="desktop-menu-text" href="contact.html">
+                    <h3>
+                        Kontakt
+                    </h3>
+                </a>
+            </nav>
 
-        <!-- Mobile -->
-        <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
-        <nav id="header-menu-content-js" class="menu">
-            <a class="menu-link" href="index.html">
-                <h3>
-                    Forside
-                </h3>
-            </a>
-            <a class="menu-link" href="projects.html">
-                <h3>
-                    Projekter
-                </h3>
-            </a>
-            <a class="menu-link" href="about.html">
-                <h3>
-                    Om mig
-                </h3>
-            </a>
-            <a class="menu-link" href="contact.html">
-                <h3>
-                    Kontakt
-                </h3>
-            </a>
-        </nav>
+            <!-- Mobile -->
+            <img id="header-menu-js" src="assets/illustrations/menu.svg" alt="Burger Menu">
+            <nav id="header-menu-content-js" class="menu">
+                <a class="menu-link" href="index.html">
+                    <h3>
+                        Forside
+                    </h3>
+                </a>
+                <a class="menu-link" href="projects.html">
+                    <h3>
+                        Projekter
+                    </h3>
+                </a>
+                <a class="menu-link" href="about.html">
+                    <h3>
+                        Om mig
+                    </h3>
+                </a>
+                <a class="menu-link" href="contact.html">
+                    <h3>
+                        Kontakt
+                    </h3>
+                </a>
+            </nav>
+        </section>
     </header>
 
 
